--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mi Página Web</title>
+    <title>Inicio</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
-        /* Estilos básicos para el menú y contenido */
-        body {
+         body {
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
@@ -42,18 +42,25 @@
 </head>
 <body>
 
-    <!-- Menú de navegación -->
-    <nav>
-        <a href="#">Página 1</a>
-        <a href="#">Página 2</a>
-        <a href="#">Página 3</a>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item"><a class="nav-link active" href="index.html">Inicio</a></li>
+                <li class="nav-item"><a class="nav-link" href="pagina1.html">Página 1</a></li>
+                <li class="nav-item"><a class="nav-link" href="pagina2.html">Página 2</a></li>
+                <li class="nav-item"><a class="nav-link" href="pagina3.html">Página 3</a></li>
+            </ul>
+        </div>
     </nav>
 
-    <!-- Contenido principal con imagen y texto grande -->
+    
     <div class="container">
         <h1>Bienvenidos a Mi Página</h1>
-        <img src="dragon.jpg" alt="Imagen de ejemplo">
+        <img src="dragon.jpg">
+        <p>En esta pagina hablare un poco de los dragones de DnD</p>
     </div>
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+s
