nuevo dragon de edu

--- a/pagina1.html
+++ b/pagina1.html
@@ -51,6 +51,7 @@
             Dragón de Esmeralda: Centran sus habilidades en la manipulación del tiempo.
             Dragón de Zafiro: Pueden influir en las mentes y la psiónica.
             Dragón de Topacio: Sus habilidades están conectadas a la necromancia y la descomposición.</p>
+            Dragón de Escarlata: Sus habilidades están conectadas a la metalurgia y la fundicion.</p>
 
         <!-- Imágenes -->
         <img src="Chroma.jpg" >
